--------------------------------------------------------------------------------
MZK 2025-03-16 17:21:12-04:00 - build 6451

1. gh-918: Introduced type segment
   Using segment instead of std::pair<int, int> (or similar) because there
   is no way to remember what the second item represents: length, end, or last.

--------------------------------------------------------------------------------
drkns 2025-03-07 17:43:00+00:00 - build 6450

1. Revert 6449.

--------------------------------------------------------------------------------
drkns 2025-03-06 19:58:42+00:00 - build 6449

1. Continue gh-924: make percentage rounding more explicit.

--------------------------------------------------------------------------------
Yegor 2025-03-04 19:00:00-08:00 - build 6448

1. Added 'Used' space and memory values to the Panel Info

--------------------------------------------------------------------------------
drkns 2025-03-01 19:36:11+00:00 - build 6447

1. More gh-909.

--------------------------------------------------------------------------------
drkns 2025-03-01 16:34:12+00:00 - build 6446

1. Refactoring.

2. Minor fix in color picker preview.

--------------------------------------------------------------------------------
drkns 2025-02-27 03:04:51+00:00 - build 6445

1. Refactoring.

--------------------------------------------------------------------------------
drkns 2025-02-26 20:59:10+00:00 - build 6444

1. Experimental: custom color themes (%FARHOME%\Addons\Colors\Interface) can be selected directly from the UI (Options - Colors - Themes).

--------------------------------------------------------------------------------
drkns 2025-02-25 20:39:35+00:00 - build 6443

1. Continue 6385.5.

--------------------------------------------------------------------------------
drkns 2025-02-19 19:47:29+00:00 - build 6442

1. Update thirdparty libraries.

2. Warnings.

--------------------------------------------------------------------------------