@@ -1,4 +1,9 @@
 --------------------------------------------------------------------------------
+drkns 2025-03-18 22:06:19+00:00 - build 6452
+
+1. Ensure that plugins cannot break recursive GetOpenPanelInfoW calls.
+
+--------------------------------------------------------------------------------
 MZK 2025-03-16 17:21:12-04:00 - build 6451
 
 1. gh-918: Introduced type segment
